--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.datasource.username=uzmvs6j9bowjgooc
 spring.datasource.password=Ta6nMeLaTfeuqLbIHAn3
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
+spring.datasource.hikari.maximum-pool-size=2
+
 #JWT
 jwt.secret = secret
 jwt.expiration = 6000
