--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,13 @@
             <artifactId>jaxb-api</artifactId>
             <version>2.4.0-b180830.0359</version>
         </dependency>
-    </dependencies>
+            <dependency>
+                  <groupId>org.springframework</groupId>
+                  <artifactId>spring-webmvc</artifactId>
+                  <version>6.0.7</version>
+                  <type>jar</type>
+            </dependency>
+      </dependencies>
         
     <build>
         <plugins>
